##################################################################
# @file 
# Copyright &copy; AUDI AG. All rights reserved.
# 
# This Source Code Form is subject to the terms of the 
# Mozilla Public License, v. 2.0. 
# If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
##################################################################
add_subdirectory(clock/c/src)
add_subdirectory(job_registry/c/src)
add_subdirectory(scheduler/c/src)
add_subdirectory(simulation_bus/c/src)